wiki/Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wikijs-deploy
  namespace: wikijs
  labels:
    app: wikijs
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wikijs
  template:
    metadata:
      labels:
        app: wikijs
    spec:
      containers:
        - name: wikijs
          image: requarks/wiki:2
          ports:
          - containerPort: 3000
            protocol: TCP
